--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,24 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-    <include src="./partials/example.html"></include>
+    <!-- В этот список добавляй элементы галереи -->
+    <ul class="gallery js-gallery"></ul>
 
-    <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
-    <script src="./index.js"></script>
+    <!--
+      Модальное окно для полноразмерного изображения
+      Для того чтобы открыть, необходимо добавить на div.lightbox CSS-класс is-open
+    -->
+    <div class="lightbox js-lightbox">
+      <div class="lightbox__overlay"></div>
+
+      <div class="lightbox__content">
+        <img class="lightbox__image" src="" alt="" />
+      </div>
+
+      <button type="button" class="lightbox__button" data-action="close-lightbox"></button>
+    </div>
+
+    <script src="js/app.js" type="module"></script>
+    <!-- <script src="/js/galleryItems.js" type="module"></script> -->
   </body>
 </html>
